Fix bug in gw-inline.js

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -2695,7 +2695,7 @@ function removeScrollListener(name) {
 
 /*	Simple mutex mechanism.
  */
-function doIfAllowed(f, passHolder, passName, releaseAfterAnimationFrame = true) {
+function doIfAllowed(f, passHolder, passName, releaseImmediately = false) {
 	if (passHolder[passName] == false)
 		return;
 
@@ -2703,9 +2703,13 @@ function doIfAllowed(f, passHolder, passName, releaseAfterAnimationFrame = true)
 
 	f();
 
-	requestAnimationFrame(() => {
+	if (releaseImmediately) {
 		passHolder[passName] = true;
-	});
+	} else {
+		requestAnimationFrame(() => {
+			passHolder[passName] = true;
+		});
+	}
 }
 
 /*	When the given event is triggered on the given target, after the given delay
