Slight refactor in gw-inline.js

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -2991,9 +2991,7 @@ GW.notificationCenter = {
     	(Handlers with no specified phase might be called at any point in this
     	 sequence, depending on when they were registered.)
      */
-    handlerPhaseOrders: {
-        "GW.contentDidLoad": [ "rewrite", "eventListeners" ]
-    },
+    handlerPhaseOrders: { },
 
     /*	Register a new event handler for the named event. Arguments are:
 
@@ -3394,6 +3392,10 @@ GW.notificationCenter = {
 		GW.notificationCenter.addWaitingHandlersForEvent(eventName);
     }
 };
+
+/*	Event-specific handler phase order for the ‘GW.contentDidLoad’ event.
+ */
+GW.notificationCenter.handlerPhaseOrders["GW.contentDidLoad"] = [ "rewrite", "eventListeners" ];
 
 /*	Event-specific boolean flags for the ‘GW.contentDidLoad’ event.
 
