--- a/404.page
+++ b/404.page
@@ -167,7 +167,7 @@ Try to remember... Other options:
 - [Resorting Media Ratings](/Resorter "Branwen 2015"){.backlink-not .icon-not}
 - [Caffeine wakeup experiment](/zeo/Caffeine "Branwen 2013"){.backlink-not .icon-not}
 - [Terrorism is not Effective](/Terrorism-is-not-Effective){.backlink-not .icon-not}
-- ["Shiny Balls of Mud"](/docs/japan/2002-gibson "‘Shiny balls of Mud: William Gibson Looks at Japanese Pursuits of Perfection’, Gibson 2012"){.backlink-not .icon-not}
+- ["Shiny Balls of Mud"](/docs/japan/art/2002-gibson "‘Shiny balls of Mud: William Gibson Looks at Japanese Pursuits of Perfection’, Gibson 2012"){.backlink-not .icon-not}
 - [`/docs/anime/index`](/docs/anime/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [SMPY Bibliography](/SMPY "Branwen 2018"){.backlink-not .icon-not}
 - [Cat Psychology & Domestication: Are We Good Owners?](/reviews/Cat-Sense "Branwen 2018"){.backlink-not .icon-not}
