--- a/templates/default.html
+++ b/templates/default.html
@@ -86,10 +86,10 @@
           <svg viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div id="sidebar-links">
-        <a class="site  link-local link-annotated" href="/About"            title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
-        <a class="links link-local link-annotated" href="/Links"            title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
-        <a class="new   link-local link-annotated" href="/Changelog"        title="Changelog of what's new or updated">Changes</a>
-        <a class="mail  link-local"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
+        <a class="site  link-page link-annotated" href="/About"            title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
+        <a class="links link-page link-annotated" href="/Links"            title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
+        <a class="new   link-page link-annotated" href="/Changelog"        title="Changelog of what's new or updated">Changes</a>
+        <a class="mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
         <a class="patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br><span>PATREON</span></a>
         </div>
       </nav>
@@ -131,11 +131,11 @@
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
         <nav id="navigation">
-          <a id="navigation-previous" class="link-local-not" rel="prev" href="$previous$" title="Link to previous page by topic, ‘$previous$’"
+          <a id="navigation-previous" class="link-page-not" rel="prev" href="$previous$" title="Link to previous page by topic, ‘$previous$’"
             ><svg><use href="/static/img/icons/sequential-nav-icons-arabesque.svg#direction" /></svg></a>
-          <a id="navigation-center" class="link-local-not" title="Return to top of current page" href="#top"
+          <a id="navigation-center" class="link-page-not" title="Return to top of current page" href="#top"
             ><svg><use href="/static/img/icons/sequential-nav-icons-arabesque.svg#center" /></svg></a>
-          <a id="navigation-next" class="link-local-not" rel="next" href="$next$" title="Link to next page by topic, ‘$next$’"
+          <a id="navigation-next" class="link-page-not" rel="next" href="$next$" title="Link to next page by topic, ‘$next$’"
             ><svg><use href="/static/img/icons/sequential-nav-icons-arabesque.svg#direction" /></svg></a>
         </nav>
 
