*.html: rename <link /> to <link> for consistency with most <link> elements on gwern.net & new W3C validator style recommendation
see https://google.github.io/styleguide/htmlcssguide.html#Document_Type https://software.hixie.ch/utilities/js/live-dom-viewer/ https://github.com/prettier/prettier/issues/5246 W3C warning text: 'Self-closing tag syntax in text/html documents is widely discouraged; it’s unnecessary and interacts badly with other HTML features (e.g., unquoted attribute values). If you’re using a tool that injects self-closing tag syntax into all void elements, without any option to prevent it from doing so, then consider switching to a different tool.'

--- a/templates/default.html
+++ b/templates/default.html
@@ -38,7 +38,7 @@
     $endif$
     <meta name="contact" content="https://www.gwern.net/Links#contact">
     <link rel="index" title="Gwern.net homepage" href="https://www.gwern.net/index">
-    <link href="https://gwern.substack.com/feed" type="application/rss+xml" rel="alternate" title="ATOM/RSS feed of Gwern.net newsletters with additions and links." />
+    <link href="https://gwern.substack.com/feed" type="application/rss+xml" rel="alternate" title="ATOM/RSS feed of Gwern.net newsletters with additions and links.">
 
     <meta name="twitter:creator" content="gwern">
     <meta name="twitter:site" content="gwern.net">
@@ -71,7 +71,7 @@
 
     <title>$titlePlain$ · Gwern.net</title>
 
-    <link rel="icon" type="image/png" href="/static/img/logo/logo-favicon-small.png" />
+    <link rel="icon" type="image/png" href="/static/img/logo/logo-favicon-small.png">
     <link rel="apple-touch-icon" type="image/png" href="/static/img/logo/logo-favicon-appletouch.png">
   </head>
 
