--- a/includes/inlined-graphical-linkicon-styles.html
+++ b/includes/inlined-graphical-linkicon-styles.html
@@ -65,6 +65,7 @@ a[data-link-icon='raven'] { --link-icon-url: url('/static/img/icons/raven.svg');
 a[data-link-icon='hoover-institution'] { --link-icon-url: url('/static/img/icons/hoover-institution.svg'); }
 a[data-link-icon='magnifying-glass'] { --link-icon-url: url('/static/img/icons/magnifying-glass.svg'); }
 a[data-link-icon='stat-news'] { --link-icon-url: url('/static/img/icons/stat-news.svg'); }
+a[data-link-icon='anthropic'] { --link-icon-url: url('/static/img/icons/anthropic.svg'); }
 a[data-link-icon='arrow-up-left'] { --link-icon-url: url('/static/img/icons/arrow-up-left.svg'); }
 a[data-link-icon='arrow-down-right'] { --link-icon-url: url('/static/img/icons/arrow-down-right.svg'); }
 a[data-link-icon='arrow-right'] { --link-icon-url: url('/static/img/icons/arrow-right.svg'); }
