--- a/css/default.css
+++ b/css/default.css
@@ -2300,8 +2300,8 @@ p {
     font-size: 0.7em;
     line-height: 0.7;
 }
-.subsup sub {
-    top: .2em;
+.subsup sup {
+    top: 0.25em;
 }
 /*  Make sure that adjusted prices move as a block: no breaking in the middle between the price & sup/sub; this works better than trying to use no-break Unicode entities
     */
