links.css: 404 links are getting the G-icon bc apparently icon-not doesn't matter there? add a css clause

--- a/404.page
+++ b/404.page
@@ -41,7 +41,7 @@ Try to remember... Other options:
 - [Spaced Repetition for Efficient Learning](/Spaced-repetition "Branwen 2009"){.backlink-not .icon-not}
 - [My Ordinary Life: Improvements Since the 1990s](/Improvements "Branwen 2018"){.backlink-not .icon-not}
 - [Laws of Tech: Commoditize Your Complement](/Complement "Branwen 2018"){.backlink-not .icon-not}
-- [`/newsletter/2020/05`](/newsletter/2020/05 "‘May 2020 News’, Branwen 2019"){.backlink-not .icon-not}
+- [OKCupid blog post archive](/docs/psychology/okcupid/index){.backlink-not .icon-not}
 - [Modafinil](/Modafinil){.backlink-not .icon-not}
 - [Nootropics](/Nootropics){.backlink-not .icon-not}
 - [Internet Search Tips](/Search "Branwen 2018"){.backlink-not .icon-not}
