initial.css: indent/hyphenate A/B test: delete a selector which shouldn't ever be there, apparently (dropcaps don't work well with indentation)

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1018,8 +1018,7 @@ p {
 }
 body.indented p + p,
 body.indented p + figure[class^='float-'] + p,
-body.indented div[class^='drop-cap-'] + p,
-body.indented .abstract + p {
+body.indented div[class^='drop-cap-'] + p {
     text-indent: 2.5em;
 }
 @media only screen and (max-width: 649px) {
